# kitcat

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kitcat/: __init__.py  backend.py  terminal_query.py  utils.py
src/kitcat/protocols/: iterm.py  kitty_basic.py  kitty_unicode_placeholder.py
