[project]
name = "kitcat"
version = "2.0.1"
description = "Matplotlib backend for direct plotting in the terminal."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9",
]
keywords = ["matplotlib", "kitty"]
authors = [
  {name = "Milad Alizadeh", email = "git@mil.ad"},
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mil-ad/kitcat.git"
Issues = "https://github.com/mil-ad/kitcat/issues"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pre-commit>=4.0.1",
    "prek>=0.4.5",
    "pytest>=8.0",
    "ruff>=0.8.4",
]

[project.entry-points."matplotlib.backend"]
kitcat = "kitcat.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
